@@ -13,7 +13,7 @@ Log::Log4perl->easy_init($ERROR);
 
 # What instances of Chrome will we try?
 my @instances = t::helper::browser_instances();
-my $testcount = 33;
+my $testcount = 35;
 
 if (my $err = t::helper::default_unavailable) {
     plan skip_all => "Couldn't connect to Chrome: $@";
@@ -116,4 +116,17 @@ t::helper::run_across_instances(\@instances, \&new_mech, $testcount, sub {
     @result = $mech->value('multic');
     cmp_bag \@result, [1,1,2,2], "->field returned bag 1,1,2,2";
     # diag explain \@result;
+
+    # Check that we can address multiple fields with the same form parameter name
+    $mech->get_local('50-form2.html');
+    $mech->form_with_fields('date');
+    @result = ();
+    my $ok = eval {
+        $mech->set_fields( date => ['2020-04-04',2] );
+        1;
+    };
+    is $ok, 1, "We survived setting the second date field"
+        or diag $@;
+    @result = $mech->value('date',2);
+    is_deeply \@result, ['2020-04-04'], "We set the second date field";
 });
