@@ -49,6 +49,9 @@
       taking a new value as its second parameter. The old form was deprecated
       a long time ago.
 
+    * ->set_fields() now can set the value of fields with the same name
+      ->set_fields( foo => ['new_value', 2] ) now works.
+
 0.47 2020-04-08
     * Add ->transport() accessor to WWW::Mechanize::Chrome
       This currently just is ->driver->transport
